# ArcueidBot

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  setup.py
src/arcueid/: __main__.py  bot.py  context.py  datastructures.py  helper.py  reactiontree.py  settings.py
src/arcueid/cogs/: __init__.py  abc.py  admin.py  errorhandling.py  ffxiv.py  gacha.py  general.py  genshin.py  images.py  moderation.py  social.py  voice.py
